--- a/防小米页面/css/index.css
+++ b/防小米页面/css/index.css
@@ -1,9 +1,14 @@
 body{
+	min-height: 2000px;
+	background-color: #f5f5f5;
+}
+
+body{
   font-size: 12px;
   color: #333;
 }
 .container{
-  width: 1206px;
+  width:1206px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -75,4 +80,121 @@ body{
 .page-top .top-gt span {
 	color: #3f3f3f;
 	padding: 0 3px;
+}
+
+.page-top .top-gt .car-box{
+	position: relative;
+	line-height: 38px;
+	display: block;
+	text-align: center;
+	color:#a2a2a2;
+	width:118px;
+	background-color: #424242;
+	float: right;
+	height: 38px;
+	z-index: 1000;
+}
+
+.page-top  .car-box  .pop{
+  width: 360px;
+  top:40px;
+  position: absolute;
+  right: 0;
+  background-color:#fff;
+	box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+  display: none;
+}
+.page-top  .car-box:hover{
+  background-color: #fff;
+  color:#ff6700;
+}
+
+.page-top  .car-box:hover  .pop{
+  color: black;
+  display: block;
+}
+.page-top .pop .list{
+	
+	padding:0 20px; 
+	max-height: 450px;
+	overflow-y: scroll; 
+}
+
+.page-top  .pop  .list li{
+  border-bottom: 1px  solid  #e0e0e0e0;
+  list-style: none;
+  padding:10px  0;
+  margin-top:10px;
+}
+
+.page-top .pop .list img{
+	width:70px;
+	height: 70px; 
+	float: left;
+}
+.page-top .pop .list .pic{
+	float:left;
+}
+
+.page-top .pop .list .txt{
+	width: 120px;
+	float: left;
+	line-height: 60px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.page-top  .pop  .list  .txt:hover{
+  color:#ff6700;
+}
+.page-top .pop .list .num{		
+  text-align: right;
+}
+.page-top  .pop  .list  .num  h4{
+  line-height: 30px;
+  margin-top: 12px;
+  font-weight: normal;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.page-top .pop .list .num i{
+	float: right;  
+	margin-top: 10px;
+}
+
+.page-top .pop .list .num i:hover{
+  font-style: normal;
+  cursor: pointer;
+  color: #aaa;
+}
+
+.page-top .pop .total{
+	height: 60px;
+	background-color: #fafafa;
+	padding:15px 10px;
+	overflow:hidden;
+
+}
+
+.page-top .pop .total .price{
+	float: left;
+}
+.page-top .pop .total .price p{
+	color:#7e7e7e;
+}
+.page-top .pop .total .price h3{
+	font-size:18px;
+	color: #ff6700;
+	font-weight: normal;
+}
+.page-top .pop .total .btn{
+	margin-top: 10px;
+	width: 132px;
+	height: 40px;
+	background-color:#ff6700;
+	color:#fff;
+	text-align: center;
+	line-height: 40px;
+	float:right;
+	display: block; 
 }
