--- a/防小米页面/css/index.css
+++ b/防小米页面/css/index.css
@@ -1,200 +1,281 @@
-body{
-	min-height: 2000px;
-	background-color: #f5f5f5;
+body {
+  min-height: 2000px;
+  background-color: #f5f5f5;
 }
 
-body{
+body {
   font-size: 12px;
   color: #333;
 }
-.container{
-  width:1206px;
+.container {
+  width: 1206px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.page-top{
-  
+.page-top {
   height: 38px;
   background-color: #323232;
-
 }
-.page-top  .top-lt{
+.page-top .top-lt {
   color: #a2a2a2;
   line-height: 38px;
   float: left;
 }
 
-.page-top .top-lt  .span{
+.page-top .top-lt .span {
   color: #3f3f3f;
-  padding:0  3px;
+  padding: 0 3px;
 }
 
-.page-top .top-lt a:hover{
-	color:#fff;
+.page-top .top-lt a:hover {
+  color: #fff;
 }
-.page-top  .top-lt  .download{
+.page-top .top-lt .download {
   position: relative;
 }
 
-.page-top  .top-lt  .download  .down-box{
+.page-top .top-lt .download .down-box {
   width: 126px;
   background-color: #fff;
   position: absolute;
   left: 50%;
-  top:29px;
+  top: 29px;
   margin-left: -63px;
-	padding-top: 20px;
-  box-shadow: rgb(170,170,170) 0px 1px 5px;
-	text-align: center;
-	display: none;
-	z-index: 1000;
+  padding-top: 20px;
+  box-shadow: rgb(170, 170, 170) 0px 1px 5px;
+  text-align: center;
+  display: none;
+  z-index: 1000;
 }
 
-.page-top .top-lt .down-box img{
-	width: 88px;
-	height:88px;
-	display: block;
-	margin: 0 auto;
+.page-top .top-lt .down-box img {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
-.page-top .top-lt a.download .down-box{
-	font-style: normal;
-	color:#323232;
+.page-top .top-lt a.download .down-box {
+  font-style: normal;
+  color: #323232;
 }
-.page-top  .top-lt  a.download:hover  .down-box{
+.page-top .top-lt a.download:hover .down-box {
   display: block;
 }
 
-.page-top  .top-gt{
+.page-top .top-gt {
   float: right;
 }
-.page-top .top-gt .login{
-	color:#a2a2a2;
-	line-height: 38px;
-	float: right;
-	margin-right: 20px;
+.page-top .top-gt .login {
+  color: #a2a2a2;
+  line-height: 38px;
+  float: right;
+  margin-right: 20px;
 }
-.page-top .top-gt .login a:hover{
-	color:#fff;
+.page-top .top-gt .login a:hover {
+  color: #fff;
 }
 .page-top .top-gt span {
-	color: #3f3f3f;
-	padding: 0 3px;
+  color: #3f3f3f;
+  padding: 0 3px;
 }
 
-.page-top .top-gt .car-box{
-	position: relative;
-	line-height: 38px;
-	display: block;
-	text-align: center;
-	color:#a2a2a2;
-	width:118px;
-	background-color: #424242;
-	float: right;
-	height: 38px;
-	z-index: 1000;
+.page-top .top-gt .car-box {
+  position: relative;
+  line-height: 38px;
+  display: block;
+  text-align: center;
+  color: #a2a2a2;
+  width: 118px;
+  background-color: #424242;
+  float: right;
+  height: 38px;
+  z-index: 1000;
 }
 
-.page-top  .car-box  .pop{
+.page-top .car-box .pop {
   width: 360px;
-  top:40px;
+  top: 40px;
   position: absolute;
   right: 0;
-  background-color:#fff;
-	box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
   display: none;
 }
-.page-top  .car-box:hover{
+.page-top .car-box:hover {
   background-color: #fff;
-  color:#ff6700;
+  color: #ff6700;
 }
 
-.page-top  .car-box:hover  .pop{
+.page-top .car-box:hover .pop {
   color: black;
   display: block;
 }
-.page-top .pop .list{
-	
-	padding:0 20px; 
-	max-height: 450px;
-	overflow-y: scroll; 
+.page-top .pop .list {
+  padding: 0 20px;
+  max-height: 450px;
+  overflow-y: scroll;
 }
 
-.page-top  .pop  .list li{
-  border-bottom: 1px  solid  #e0e0e0e0;
+.page-top .pop .list li {
+  border-bottom: 1px solid #e0e0e0e0;
   list-style: none;
-  padding:10px  0;
-  margin-top:10px;
+  padding: 10px 0;
+  margin-top: 10px;
 }
 
-.page-top .pop .list img{
-	width:70px;
-	height: 70px; 
-	float: left;
+.page-top .pop .list img {
+  width: 70px;
+  height: 70px;
+  float: left;
 }
-.page-top .pop .list .pic{
-	float:left;
+.page-top .pop .list .pic {
+  float: left;
 }
 
-.page-top .pop .list .txt{
-	width: 120px;
-	float: left;
-	line-height: 60px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
+.page-top .pop .list .txt {
+  width: 120px;
+  float: left;
+  line-height: 60px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.page-top  .pop  .list  .txt:hover{
-  color:#ff6700;
+.page-top .pop .list .txt:hover {
+  color: #ff6700;
 }
-.page-top .pop .list .num{		
+.page-top .pop .list .num {
   text-align: right;
 }
-.page-top  .pop  .list  .num  h4{
+.page-top .pop .list .num h4 {
   line-height: 30px;
   margin-top: 12px;
   font-weight: normal;
   font-size: 12px;
   margin-bottom: 10px;
 }
-.page-top .pop .list .num i{
-	float: right;  
-	margin-top: 10px;
+.page-top .pop .list .num i {
+  float: right;
+  margin-top: 10px;
 }
 
-.page-top .pop .list .num i:hover{
+.page-top .pop .list .num i:hover {
   font-style: normal;
   cursor: pointer;
   color: #aaa;
 }
 
-.page-top .pop .total{
-	height: 60px;
-	background-color: #fafafa;
-	padding:15px 10px;
-	overflow:hidden;
-
+.page-top .pop .total {
+  height: 60px;
+  background-color: #fafafa;
+  padding: 15px 10px;
+  overflow: hidden;
 }
 
-.page-top .pop .total .price{
-	float: left;
+.page-top .pop .total .price {
+  float: left;
 }
-.page-top .pop .total .price p{
-	color:#7e7e7e;
+.page-top .pop .total .price p {
+  color: #7e7e7e;
 }
-.page-top .pop .total .price h3{
-	font-size:18px;
-	color: #ff6700;
-	font-weight: normal;
+.page-top .pop .total .price h3 {
+  font-size: 18px;
+  color: #ff6700;
+  font-weight: normal;
 }
-.page-top .pop .total .btn{
-	margin-top: 10px;
-	width: 132px;
-	height: 40px;
-	background-color:#ff6700;
-	color:#fff;
-	text-align: center;
-	line-height: 40px;
-	float:right;
-	display: block; 
+.page-top .pop .total .btn {
+  margin-top: 10px;
+  width: 132px;
+  height: 40px;
+  background-color: #ff6700;
+  color: #fff;
+  text-align: center;
+  line-height: 40px;
+  float: right;
+  display: block;
+}
+.page-nav {
+  height: 96px;
+  background-color: #fff;
+  position: relative;
+  z-index: 100;
+  background-color: #eee;
+}
+
+.container {
+  width: 1206px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.page-nav .logo {
+  display: block;
+  float: left;
+  width: 54px;
+  height: 54px;
+  margin-top: 21px;
+  background: #ff6700 url(../img/milogo.png) center center no-repeat;
+  margin-right: 45px;
+}
+.page-nav .container .nav li {
+  list-style: none;
+}
+.page-nav .nav-item {
+  margin-left: 16px;
+  float: left;
+  padding-top: 24px;
+  height: 57px;
+  padding: 40px 4px 0;
+}
+.page-nav .nav-item .tit {
+  font-size: 16px;
+  color: #666;
+}
+
+.page-nav .nav-item a:hover {
+  color: #ff6700;
+}
+
+.search {
+  float: right;
+  position: relative;
+  margin-top: 24px;
+}
+.page-nav .container .search .q {
+  width: 234px;
+  height: 48px;
+  border: 1px solid #ff6700;
+  outline: none;
+  line-height: 48px;
+  padding-left: 4px;
+  float: left;
+  cursor: pointer;
+}
+.page-nav .search .btn {
+  width: 50px;
+  height: 50px;
+  float: left;
+  border: 1px solid #ff6700;
+  cursor: pointer;
+  background: #fff url(../img/search.png) center center no-repeat;
+  background-size: 16px 16px;
+}
+
+.page-nav  .search  .tags{
+  position: absolute;
+	top:15px;
+	left: 5px;
+	width: 230px;
+	text-align: right;
+}
+
+.page-nav  .search  .tags span{
+	line-height: 18px;
+	padding:0 5px;
+	background-color: #eee;
+	font-size: 12px;
+	cursor: pointer;
+}
+.page-nav  .search  .tags span:hover{
+	background-color: #fff;
+	color:#ff6700;
 }
